// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View dangerouslySetStyle 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "alignSelf": "auto",
        "flexDirection": "column",
        "flexGrow": undefined,
        "flexShrink": undefined,
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "flex-start",
        "width": undefined,
      },
      undefined,
      undefined,
      undefined,
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;

exports[`View default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "alignSelf": "auto",
        "flexDirection": "column",
        "flexGrow": undefined,
        "flexShrink": undefined,
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "flex-start",
        "width": undefined,
      },
      undefined,
      undefined,
      undefined,
      Object {},
    ]
  }
/>
`;

exports[`View elevation 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        undefined,
        Object {
          "borderColor": "#F1F3F5",
          "borderWidth": 1,
          "shadowColor": "#071422",
          "shadowOffset": Object {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.02,
          "shadowRadius": 12,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        undefined,
        Object {
          "borderColor": "#F1F3F5",
          "borderWidth": 1,
          "shadowColor": "#071422",
          "shadowOffset": Object {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.24,
          "shadowRadius": 40,
        },
        Object {},
      ]
    }
  />,
]
`;

exports[`View pin 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        Object {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        Object {
          "bottom": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        undefined,
        Object {},
      ]
    }
  />,
]
`;

exports[`View spacing 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        undefined,
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "padding": 24,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "padding": 0,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "padding": 24,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 0,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "marginHorizontal": -16,
          "paddingBottom": 16,
          "paddingTop": 0,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "marginRight": -16,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingTop": 0,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "paddingTop": 16,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "paddingHorizontal": 16,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "marginBottom": -12,
          "paddingHorizontal": 16,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "alignSelf": "auto",
          "flexDirection": "column",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "flexWrap": "nowrap",
          "height": undefined,
          "justifyContent": "flex-start",
          "width": undefined,
        },
        Object {
          "marginRight": -24,
          "paddingBottom": 12,
          "paddingLeft": 0,
          "paddingTop": 16,
        },
        undefined,
        undefined,
        Object {},
      ]
    }
  />,
]
`;
